refactored order service and payment service to fix the issue of not auto creating a payment on order placed